=== SVN

* Better spec code coverage.

=== 0.19.11 (2007-08-24)

* Changed Dataset#set_model to allow supplying additional arguments to the model's initialize method (#35). Thanks Sunny Hirai.

=== 0.19.10 (2007-08-22)

* Changed schema generation code to generate separate statements for CREATE TABLE and each CREATE INDEX (#34).

* Refactored Dataset::SQL#field_name for better support of different field quoting standards by specific adapters.

* Added #current_page_record_count for paginated datasets.

* Removed Database#literal and included Dataset::SQL instead.

* Sequel::Dataset:SQL#field_name can now take a hash (as well as #select and any method that uses #field_name) for aliasing column names.  E.g. DB[:test].select(:_qqa => 'Date').sql #=> 'SELECT _qqa AS Date FROM test'.

* Moved SingleThreadedPool to lib/sequel/connection_pool.rb.

* Changed SQLite::Dataset to return affected rows for #delete and #update (#33).

* ADO adapter: Added use of Enumerable for Recordset#Fields, playing it safe and moving to the first row before getting results, and changing the auto_increment constant to work for MSSQL.

=== 0.1.9.9 (2007-08-18)

* New ADO adapter by cdcarter (#31).

* Added automatic column aliasing to #avg, #sum, #min and #max (#30).

* Fixed broken Sequel::DBI::Dataset#fetch_rows (#29 thanks cdcarter.)

=== 0.1.9.8 (2007-08-15)

* Fixed DBI adapter.

=== 0.1.9.7 (2007-08-15)

* Added support for executing batch statements in sqlite adapter.

* Changed #current_page_record_range to return 0..0 for an invalid page.

* Fixed joining of aliased tables.

* Improved Symbol#to_field_name to prevent false positives.

* Implemented Dataset#multi_insert with :commit_every option.

* More docs for Dataset#set_model.

* Implemented automatic creation of convenience methods for each adapter (e.g. Sequel.sqlite etc.)

=== 0.1.9.6 (2007-08-13)

* Refactored schema definition code. Gets rid of famous primary_key problem as well as other issues (e.g. issue #22).
