@@ -1,0 +1,47 @@
+require File.join(File.dirname(__FILE__), 'spec_helper')
+
+Sequel::Model.db = SchemaDummyDatabase.new
+
+describe Sequel::Model do
+  before do
+    @model = Class.new(Sequel::Model(:items))
+  end
+  
+  it "creates dynamic model subclass with set table name" do
+    @model.table_name.should == :items
+  end
+  
+  it "defaults to primary key of id" do
+    @model.primary_key.should == :id
+  end
+  
+  it "allow primary key change" do
+    @model.set_primary_key :ssn
+    @model.primary_key.should == :ssn
+  end
+  
+  it "allows table name change" do
+    @model.set_table_name :foo
+    @model.table_name.should == :foo
+  end
+  
+  it "sets schema with implicit table name" do
+    @model.set_schema do
+      primary_key :ssn, :string
+    end
+    @model.primary_key.should == :ssn
+    @model.table_name.should == :items
+  end
+  
+  it "sets schema with explicit table name" do
+    @model.set_schema :foo do
+      primary_key :id
+    end
+    @model.primary_key.should == :id
+    @model.table_name.should == :foo
+  end
+
+  it "puts the lotion in the basket or it gets the hose again" do
+    # just kidding!
+  end
+end
